--- a/src/Sidebar/Sidebar.scss
+++ b/src/Sidebar/Sidebar.scss
@@ -8,8 +8,8 @@
     z-index: 0;
 
     margin-right: 1rem;
-    padding: 0.2rem;
-    font-size: 2rem;
+    padding: 0.5rem;
+    font-size: 1rem;
 
     @include buttonWithBorder();
     border-left: none;
@@ -69,9 +69,6 @@
         padding: 1.5rem;
         padding-top: none;
 
-        overflow-x: hidden;
-        overflow-y: scroll;
-
         margin-bottom: 1rem;
 
         display: none;
@@ -91,6 +88,7 @@
     text-transform: uppercase;
 
     font-size: 0.5rem;
+    font-weight: bold;
     background-color: $primaryColor;
     color: saturate($secondaryColor, 100%)
 }
